Implement login and site search

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -8,3 +8,4 @@
 @import "../netlify-ui/src/stylesheets/2.0/imports/lists.css";
 @import "../netlify-ui/src/stylesheets/2.0/imports/navigation.css";
 @import "../netlify-ui/src/stylesheets/2.0/imports/cards.css";
+@import "../netlify-ui/src/stylesheets/2.0/imports/modals.css";
